--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "results-summart-component",
 	"version": "0.1.0",
 	"private": true,
-	"homepage": "https://avenjd.github.io/Results-summary-component/",
+	"homepage": "https://avenjd.github.io/Results-summary-component",
 	"dependencies": {
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
@@ -10,11 +10,11 @@
 		"gh-pages": "^5.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-scripts": "^2.1.3",
+		"react-scripts": "^5.0.1",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
-		"start": "react-scripts start",
+		"start": "react-scripts --openssl-legacy-provider start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
